Copy code from transportation-changes-webhook project to convert to Webpack

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
 name = "current-trends-collector"
-type = "javascript"
+type = "webpack"
 account_id = "48dc54069a01a3f660c95d048b589bc2"
 workers_dev = true
 route = ""
