--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier": "^1.18.2"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "cheerio": "1.0.0-rc.3",
     "htmlparser2": "4.0.0",
     "request": "2.88.0",
