--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write '**/*.{js,css,json,md}'"
+    "format": "prettier --write '**/*.{js,css,json,md}'",
+    "start": "wrangler preview --watch",
+    "deploy": "wrangler publish"
   },
   "author": "leo",
   "license": "MIT",
@@ -14,7 +16,6 @@
     "prettier": "^1.18.2"
   },
   "dependencies": {
-    "axios": "^0.19.2",
     "cheerio": "1.0.0-rc.3",
     "htmlparser2": "4.0.0",
     "request": "2.88.0",
