--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "cheerio": "1.0.0-rc.3",
+    "date-fns": "^2.12.0",
     "htmlparser2": "4.0.0",
     "request": "2.88.0",
     "x-ray": "2.3.4"
